--- a/ridgemodel_overview.ipynb
+++ b/ridgemodel_overview.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "e756887b",
-   "metadata": {},
-   "source": [
-    "folling along: https://www.kaggle.com/code/prasadposture121/house-price-predictions#House-Price-Prediction-with-Linear-Regression"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 44,
    "id": "e8e2490e",
@@ -42,8 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('train.csv')\n",
-    "test = pd.read_csv('test.csv')"
+    "train = pd.read_csv('data/train.csv')\n",
+    "test = pd.read_csv('data/test.csv')"
    ]
   },
   {
